monitor-k8s/manifest/ingress.yml
---
# Source: django-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: "djangoapp.stpayment.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-svc
                port:
                  number: 8000
    # - host: "prometheus.stpayment.in"
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: prometheus-kube-prometheus-prometheus
    #             port:
    #               number: 9090
    # - host: "grafana.stpayment.in"
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: prometheus-grafana
    #             port:
    #               number: 80
